плавная смена состояний шаринга и соцсетей

--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -241,7 +241,7 @@
     display: block;
     color: inherit;
     padding: 0 0.5em 0.5em;
-    transition: color 0.35s ease-in-out;
+    transition: color 0.35s linear;
 
     &::after {
       content: "";
