--- a/source/scss/blocks/intro.scss
+++ b/source/scss/blocks/intro.scss
@@ -93,6 +93,7 @@
   text-transform: uppercase;
   font-size: 2.4rem;
   line-height: 1.27;
+  animation: fadeIn 0.4s linear;
 
   @media (min-width: $stop-scaling) {
     width: 509px;
@@ -160,5 +161,17 @@
   @media (min-width: $stop-scaling) {
     margin: 0 0 0 -5px;
     font-size: 48px;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
