--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -14,13 +14,13 @@
 
   .swiper-slide-active {
     .slider__item-text {
-      animation: textShift 0.5s linear 0.1s;
+      animation: textShift 0.5s linear;
     }
   }
 
   .swiper-slide-next {
     .slider__item-text {
-      animation: textShift 0.6s linear 0.2s;
+      animation: textShift 0.5s linear;
     }
   }
 }
