--- a/source/scss/blocks/form.scss
+++ b/source/scss/blocks/form.scss
@@ -33,7 +33,7 @@
   flex: none;
   margin-left: auto;
   margin-right: 3rem;
-  padding: 0 5.6rem;
+  padding: 1.6rem 5.6rem;
   height: 6rem;
   width: calc(100% - 21rem);
   text-transform: uppercase;
