--- a/source/scss/blocks/screen.scss
+++ b/source/scss/blocks/screen.scss
@@ -5,9 +5,16 @@
   min-height: 100vh;
   z-index: 1;
   overflow: hidden;
+  visibility: visible;
 
   &--hidden {
-    display: none;
+    visibility: hidden;
+  }
+
+  &.active {
+    .screen__footer {
+      bottom: 0;
+    }
   }
 
   @media (max-width: $tablet) and (orientation: portrait) {
@@ -40,12 +47,13 @@
 
 .screen__footer {
   position: absolute;
-  bottom: 0;
+  bottom: -26px;
   left: 0;
   right: 0;
   color: $c-dark;
   background-color: $c-light;
   z-index: 1;
+  transition: bottom 0.4s cubic-bezier(.87,.55,.71,.92);
 
   @media (max-width: $tablet) and (orientation: portrait) {
     width: 3.5rem;
