--- a/source/scss/blocks/screen.scss
+++ b/source/scss/blocks/screen.scss
@@ -1,14 +1,15 @@
 .screen {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  z-index: 1;
   overflow: hidden;
-  visibility: visible;
+  z-index: 1;  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: 100vh;
 
   &--hidden {
-    visibility: hidden;
+    width: 0;
+    height: 0;
+    min-height: 0;
   }
 
   &.active {
@@ -18,11 +19,17 @@
   }
 
   @media (max-width: $tablet) and (orientation: portrait) {
-    min-height: calc(var(--vh, 1vh) * 100);
+    min-height: calc(var(--vh, 1vh) * 100);    &--hidden {
+      width: 0;
+      min-height: 0;
+    }
   }
 
   @media (max-width: $tablet - 1) and (orientation: landscape) {
-    height: 100vh;
+    height: 100vh;    &--hidden {
+      width: 0;
+      height: 0;
+    }
   }
 }
 
