--- a/source/scss/blocks/screen.scss
+++ b/source/scss/blocks/screen.scss
@@ -60,7 +60,7 @@
   color: $c-dark;
   background-color: $c-light;
   z-index: 1;
-  transition: bottom 0.4s cubic-bezier(.87,.55,.71,.92);
+  transition: bottom 0.4s $bezier-85-persent;
 
   @media (max-width: $tablet) and (orientation: portrait) {
     width: 3.5rem;
