--- a/source/scss/blocks/social-block.scss
+++ b/source/scss/blocks/social-block.scss
@@ -29,6 +29,7 @@
 
   &::before {
     @include center;
+    animation: circleAppear 0.45s linear 0.1s;
     content: "";
     width: 100%;
     height: 100%;
@@ -36,7 +37,7 @@
     background-color: $c-light;
     border: 2px solid $c-light;
     z-index: -1;
-    transition: width 0.35s ease-in-out, height 0.35s ease-in-out;
+    transition: transform 0.35s ease-in-out;
   }
 
   svg {
@@ -51,8 +52,7 @@
     color: $c-purple;
 
     &::before {
-      width: 112.5%;
-      height: 112.5%;
+      transform: translate(-50%, -50%) scale(1.1);
     }
   }
 
@@ -244,5 +244,25 @@
         height: 10px;
       }
     }
+  }
+}
+
+@keyframes circleAppear {
+  0% {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+
+  40% {
+    opacity: 0.8;
+    width: 60%;
+    height: 60%;
+  }
+
+  100% {
+    opacity: 1;
+    width: 100%;
+    height: 100%;
   }
 }
