--- a/source/scss/blocks/screen.scss
+++ b/source/scss/blocks/screen.scss
@@ -16,6 +16,10 @@
     .screen__footer {
       bottom: 0;
     }
+
+    .form__field {
+      animation: changeFieldWidth 0.6s ease-in;
+    }
   }
 
   @media (max-width: $tablet) and (orientation: portrait) {
