--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -270,7 +270,8 @@
       height: 2px;
       background-color: $c-light;
       display: block;
-      left: 0;
+      right: 0;
+      transition: width 0.4s ease-in-out;
 
       @media (max-width: $tablet) and (orientation: portrait) {
         left: 0;
@@ -285,13 +286,6 @@
       }
     }
 
-    &.active {
-      &::after {
-        animation: growWidth 0.45s ease-in-out;
-        width: 100%;
-      }
-    }
-
     &:hover,
     &:focus {
       color: $c-purple;
@@ -299,8 +293,16 @@
 
       &::after {
         background-color: $c-purple;
+      }
+    }
+
+    &:hover,
+    &:focus,
+    &.active {
+      &::after {
         width: 100%;
-        animation: growWidth 0.45s ease-in-out;
+        right: auto;
+        left: 0;
       }
     }
   }
