--- a/source/scss/blocks/screen.scss
+++ b/source/scss/blocks/screen.scss
@@ -20,6 +20,12 @@
     .form__field {
       animation: changeFieldWidth 0.6s ease-in;
     }
+
+
+    &.screen--prizes::after {
+      height: 100%;
+      z-index: 2;
+    }
   }
 
   @media (max-width: $tablet) and (orientation: portrait) {
@@ -321,7 +327,19 @@
 }
 
 .screen--prizes {
-  background-color: $c-dark;
+  background-color: transparent;
+  position: relative;
+
+  &::after {
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 0;
+    transition: height 0.6s ease-in-out;
+    background-color: $c-dark;
+    left: 0;
+    bottom: 0;
+  }
 }
 
 .screen--game {
