--- a/source/scss/blocks/rules.scss
+++ b/source/scss/blocks/rules.scss
@@ -93,7 +93,7 @@
   column-count: 2;
   column-gap: 9.6rem;
   margin: auto;
-  padding-top: 7rem;
+  padding-top: 5rem;
   max-width: 69.6rem;
 
   @media (min-width: $stop-scaling) {
@@ -119,8 +119,8 @@
 
 .rules__item {
   position: relative;
-  margin: 0 0 6.2rem;
-  padding-top: 0.6rem;
+  margin: 0 0 4.2rem;
+  padding-top: 2.6rem;
   padding-left: 6.5rem;
   break-inside: avoid;
 
@@ -148,7 +148,7 @@
     content: counter(li);
     counter-increment: li;
     position: absolute;
-    top: 0;
+    top: 2rem;
     left: 0;
     width: 4.5rem;
     height: 4.5rem;
@@ -186,10 +186,32 @@
   }
 }
 
+@for $i from 1 through 4 {
+  .rules__item:nth-child(#{$i})::before {
+    animation: rulesBullet 0.5s * $i ease-in;
+  }
+
+  .rules__item:nth-child(#{$i}) p {
+    animation: rulesText 0.5s * $i ease-in;
+  }
+}
+
 .rules__link {
   position: absolute;
   bottom: 6rem;
   right: 5.6rem;
+
+  &::before {
+    width: 0;
+    border: 0;
+  }
+
+  &--animated {
+    &::before {
+      animation: rulesLink 0.5s ease-in;
+      animation-fill-mode: forwards;
+    }
+  }
 
   @media (min-width: $stop-scaling) {
     bottom: 60px;
