--- a/source/scss/general/animation.scss
+++ b/source/scss/general/animation.scss
@@ -57,3 +57,43 @@
     transform: translateY(0);
   }
 }
+
+@keyframes rulesBullet {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+
+  50% {
+    transform: scale(1.2);
+  }
+
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes rulesText {
+  0% {
+    transform: translateX(20px);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes rulesLink {
+  0% {
+    width: 0;
+    left: 100%;
+    border: 0;
+  }
+
+  100% {
+    width: 100%;
+    left: 50%;
+    border: 2px;
+  }
+}
