--- a/source/scss/blocks/rules.scss
+++ b/source/scss/blocks/rules.scss
@@ -186,10 +186,25 @@
   }
 }
 
+@for $i from 1 through 4 {
+  .rules__item:nth-child(#{$i})::before {
+    animation: rulesBullet 0.5s * $i ease-in;
+  }
+
+  .rules__item:nth-child(#{$i}) p {
+    animation: rulesText 0.5s * $i ease-in;
+  }
+}
+
 .rules__link {
   position: absolute;
   bottom: 6rem;
   right: 5.6rem;
+
+  &::before {
+    width: 0;
+    border: 0;
+  }
 
   &--animated {
     &::before {
