--- a/source/scss/blocks/rules.scss
+++ b/source/scss/blocks/rules.scss
@@ -21,6 +21,34 @@
   @media (max-width: $mobile) and (orientation: landscape) {
     padding: 4rem 0 4rem;
   }
+
+  .screen.active & {
+    .rules__item {
+      &::before {
+        animation-name: rulesBullet;
+        animation-duration: 0.35s;
+        animation-fill-mode: both;
+        animation-timing-function: ease-in;
+      }
+
+      p {
+        animation-name: rulesText;
+        animation-duration: 0.35s;
+        animation-fill-mode: both;
+        animation-timing-function: ease-in;
+      }
+    }
+
+    @for $i from 1 through 4 {
+      .rules__item:nth-child(#{$i})::before {
+        animation-delay: 0.5s * $i;
+      }
+
+      .rules__item:nth-child(#{$i}) p {
+        animation-delay: 0.5s * $i;
+      }
+    }
+  }
 }
 
 .rules__title {
@@ -54,11 +82,19 @@
 }
 
 .rules__lead {
-  margin-left: 5.8rem;
-  max-width: 96rem;
-  text-transform: uppercase;
   font-size: 2.4rem;
   line-height: 1.2;
+  margin-left: 5.8rem;
+  max-width: 96rem;
+  opacity: 0;
+  text-transform: uppercase;
+  transform: translateY(20px);
+
+  .screen.active & {
+    opacity: 1;
+    transform: none;
+    transition: all 0.3s ease-in 0.1s;
+  }
 
   @media (min-width: $stop-scaling) {
     margin-left: 58px;
@@ -190,6 +226,7 @@
   position: absolute;
   bottom: 6rem;
   right: 5.6rem;
+  color: transparent;
 
   @media (min-width: $stop-scaling) {
     bottom: 60px;
@@ -209,5 +246,37 @@
   @media (max-width: $mobile) and (orientation: landscape) {
     bottom: 2rem;
     right: 1.5rem;
+  }
+
+  &:before {
+    top: 0;
+    left: 0;
+    transform: scaleX(0);
+    transform-origin: 100% 50%;
+  }
+
+  .screen.active & {
+    animation-name: rulesLinkColor;
+    animation-duration: .2s;
+    animation-fill-mode: forwards;
+    animation-delay: .15s;
+    animation-timing-function: ease-in;
+    animation-play-state: paused;
+
+    &::before {
+      animation-name: rulesLinkAppear;
+      animation-duration: .35s;
+      animation-fill-mode: forwards;
+      animation-timing-function: ease-in;
+      animation-play-state: paused;
+    }
+  }
+
+  .screen.active &.rules__link--animated {
+    animation-play-state: running;
+
+    &:before {
+      animation-play-state: running;
+    }
   }
 }
