--- a/source/scss/general/animation.scss
+++ b/source/scss/general/animation.scss
@@ -57,3 +57,45 @@
     transform: translateY(0);
   }
 }
+
+@keyframes rulesBullet {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+    color: transparent;
+  }
+
+  100% {
+    opacity: 1;
+    transform: scale(1);
+    color: #fff;
+  }
+}
+
+@keyframes rulesText {
+  from {
+    opacity: 0;
+    transform: translateX(30px);
+  }
+
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+@keyframes rulesLinkAppear {
+  to {
+    transform: scaleX(1);
+  }
+}
+
+@keyframes rulesLinkColor {
+  from {
+    color: transparent;
+  }
+
+  to {
+    color: $c-dark;
+  }
+}
