--- a/source/scss/blocks/intro.scss
+++ b/source/scss/blocks/intro.scss
@@ -30,7 +30,7 @@
   font-family: $font-alt;
   font-weight: 400;
   font-size: 12rem;
-  line-height: 0.906;
+  line-height: 1;
   letter-spacing: -0.04em;
 
   @media (min-width: $stop-scaling) {
@@ -49,6 +49,10 @@
 
   @media (max-width: $mobile) and (orientation: landscape) {
     font-size: 5rem;
+  }
+
+  span {
+    vertical-align: sub;
   }
 }
 
@@ -155,8 +159,8 @@
   font-family: $font-alt;
   font-weight: 400;
   font-size: 4.8rem;
-  line-height: 0.906;
-  letter-spacing: -0.04em;
+  line-height: 1;
+  letter-spacing: -0.01em;
 
   @media (min-width: $stop-scaling) {
     margin: 0 0 0 -5px;
