--- a/source/scss/blocks/result.scss
+++ b/source/scss/blocks/result.scss
@@ -22,38 +22,6 @@
   }
 }
 
-.result__image {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  z-index: -1;
-
-  @media (orientation: portrait) {
-    left: -1rem;
-    right: -1rem;
-  }
-
-  picture {
-    display: block;
-    width: 100%;
-    height: 100%;
-  }
-
-  img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-  }
-}
-
 .result__title {
   margin: 0 auto 2rem;
   color: $c-light;
@@ -266,5 +234,48 @@
     @media (max-width: $mobile) and (orientation: landscape) {
       width: 45rem;
     }
+  }
+}
+
+.result__images {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: -1;
+
+  @media (orientation: portrait) {
+    left: -1rem;
+    right: -1rem;
+  }
+}
+
+.result__image {
+  position: absolute;
+
+  &--leaf-right {
+    transform-origin: 0 50%;
+    animation: rightLeafShake 2.3s ease both;
+  }
+  &--leaf-left {
+    transform-origin: 100% 50%;
+    animation: leftLeafShake 2.1s ease both;
+  }
+  &--leaf-green {
+    transform-origin: 0 50%;
+    animation: greenLeafShake 1.8s ease 0.2s both;
+  }
+  &--flamingo {
+    animation:
+            flamingoFadeIn 0.5s cubic-bezier(0.74, 0.41, 0.24, 0.71) both,
+            flamingoFloat 2s linear 0.5s infinite;
+  }
+  &--suitcase {
+    animation: suitcaseSlideIn 0.5s ease both;
   }
 }
