--- a/source/scss/blocks/screen.scss
+++ b/source/scss/blocks/screen.scss
@@ -22,6 +22,10 @@
     }
   }
 
+  &--story.active .slider__control {
+    animation-play-state: running;
+  }
+
   @media (max-width: $tablet) and (orientation: portrait) {
     min-height: calc(var(--vh, 1vh) * 100);    &--hidden {
       width: 0;
