--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -162,6 +162,27 @@
   width: 4rem;
   height: 4rem;
   color: $c-dark;
+  animation-delay: 0.5s;
+  animation-fill-mode: backwards;
+  animation-timing-function: cubic-bezier(0.43, 0.44, 0.03, 1.65);
+  animation-duration: 0.8s;
+  animation-play-state: paused;
+
+  &--prev {
+    animation-name: controlFadeIn, sliderPrevControlRollIn;
+
+    &.swiper-button-disabled {
+      animation-name: disabledControlFadeIn, sliderPrevControlRollIn;
+    }
+  }
+
+  &--next {
+    animation-name: controlFadeIn, sliderNextControlRollIn;
+
+    &.swiper-button-disabled {
+      animation-name: disabledControlFadeIn, sliderNextControlRollIn;
+    }
+  }
 
   @media (min-width: $stop-scaling) {
     width: 40px;
